--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 permalink:           pretty
 
 # Setup
-title:               Voyager
-tagline:             The noon hacks
+title:               The weekend
+tagline:             hacks
 url:                 https://famasya.github.io
 paginate:            5
 baseurl:             ""
