--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: The weekend hacks
-description: Notes about computer stuffs
-meta_description: "Notes from software guy"
+description: "{ A tech guy & lifelong learner }"
+meta_description: "Notes about computer stuffs"
 
 aboutPage: true
 
