--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: The weekend hacks
-description: "{ A tech guy & lifelong learner }"
+description: "{ A tech guy. Lifelong learner }"
 meta_description: "Notes about computer stuffs"
 
 aboutPage: true
